--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2"
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "sweetalert2": "^11.6.13"
   }
 }
